--- a/templates/register.html
+++ b/templates/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Register</title>
+    <title>PTIT Realtime Chat - Đăng ký</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/mini.css@3.0.1/dist/mini-default.min.css"
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main style="max-width: 420px; margin: 40px auto">
-      <h2>Register</h2>
+      <h2>PTIT Realtime Chat - Đăng ký</h2>
       {% with messages = get_flashed_messages() %} {% if messages %}
       <div
         id="flash-box"
@@ -60,7 +60,7 @@
         />
         <button>Register</button>
       </form>
-      <p>Already have an account? <a href="/login">Login</a></p>
+      <p>Đã có tài khoản? <a href="/login">Đăng nhập</a></p>
     </main>
   </body>
 </html>
