--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login</title>
+    <title>PTIT Realtime Chat - Đăng nhập</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/mini.css@3.0.1/dist/mini-default.min.css"
@@ -11,7 +11,7 @@
   </head>
   <body>
     <main style="max-width: 420px; margin: 40px auto">
-      <h2>Login</h2>
+      <h2>PTIT Realtime Chat - Đăng nhập</h2>
       {% with messages = get_flashed_messages() %} {% if messages %}
       <div
         id="flash-box"
@@ -61,7 +61,7 @@
         />
         <button>Login</button>
       </form>
-      <p>Don't have an account? <a href="/register">Register</a></p>
+      <p>Không có tài khoản? <a href="/register">Đăng ký</a></p>
     </main>
   </body>
 </html>
